Fix title alignment

--- a/style.css
+++ b/style.css
@@ -109,7 +109,6 @@ header {
 
   }
   .greeting {
-    text-align: center;
     .highlight {
       color: var(--primary-color);
     }
